--- a/style.css
+++ b/style.css
@@ -4,6 +4,65 @@
     align-items: center;
     flex-wrap: wrap;
 }
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+    background: url('/img/town.jpg') center no-repeat;
+    background-size: cover;
+    border: 1px solid black;
+    padding-top: 5rem;
+    font-family: sans-serif;
+}
+
+#weatherForm {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#weatherForm label,
+.weatherContainer p {
+    font-size: 2rem;
+}
+
+#weatherContainer {
+    width: 50%;
+}
+
+#weatherInput {
+    height: 2rem;
+    width: 25rem;
+    padding: 0rem 1rem;
+    margin: 0;
+    border: 2px solid black;
+}
+
+#weatherContainer__autoComplete {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+#weatherContainer__autoComplete p {
+    height: 2rem;
+    width: calc(25rem + 2px);
+    background: white;
+    border: 1px solid black;
+    display: inline;
+    padding: 0rem 1rem;
+    margin: 0;
+}
+
+.weatherContainer {
+    width: 80%;
+    margin: 0 auto;
+}
 
 li {
     list-style-type: none;
@@ -23,9 +82,10 @@ li img {
 }
 
 p,
-#weatherIcon {
+#weatherInput {
     display: inline;
     padding-right: 1rem;
+    font-size: 1.5rem;
 }
 
 #weatherIcon {
