--- a/style.css
+++ b/style.css
@@ -10,11 +10,43 @@ body {
     box-sizing: border-box;
     width: 100vw;
     height: 100vh;
+    padding: 2rem 0rem;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: -1;
+    /* opacity: 0.9; */
     background: url('/img/town.jpg') center no-repeat;
     background-size: cover;
-    border: 1px solid black;
-    padding-top: 5rem;
-    font-family: sans-serif;
+}
+
+.section-weather {
+    width: 80%;
+    margin: 0 auto;
+    height: 30%;
+    background: #b4bdcb;
+    clip-path: polygon(93% 0%, 100% 50%, 93% 100%, 0% 100%, 7% 50%, 0% 0%);
+    opacity: 0.8;
+}
+
+.section-forecast {
+    width: 80%;
+    margin: 0 auto;
+    opacity: 0.4;
+    height: 30%;
+    background: white;
+    clip-path: polygon(100% 0%, 93% 50%, 100% 100%, 7% 100%, 0% 50%, 7% 0%);
 }
 
 #weatherForm {
@@ -91,4 +123,26 @@ p,
 #weatherIcon {
     width: 36px;
     height: 36px;
+}
+
+.section-map {
+    width: 80%;
+    margin: 0 auto;
+    height: 30%;
+    clip-path: polygon(93% 0%, 100% 50%, 93% 100%, 0% 100%, 7% 50%, 0% 0%);
+    opacity: 0.9;
+}
+
+.mapboxgl-map {
+    overflow: visible;
+}
+
+.mapboxgl-map:focus {
+    outline: none;
+}
+
+#section-forecast__canvas {
+    width: 80%;
+    height: 100%;
+    margin-left: 10%;
 }
