--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body::after {
     opacity: 0.7;
     z-index: -1;
     /* opacity: 0.9; */
-    background: url('/img/town.jpg') center no-repeat;
+    background: url('./img/town.jpg') center no-repeat;
     background-size: cover;
 }
 
