--- a/style.css
+++ b/style.css
@@ -22,13 +22,12 @@ body::after {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     opacity: 0.7;
     z-index: -1;
-    /* opacity: 0.9; */
+    opacity: 0.9;
     background: url('./img/town.jpg') center no-repeat;
-    background-size: cover;
 }
 
 .section-weather {
@@ -155,7 +154,10 @@ p,
 }
 
 .mapboxgl-map {
-    overflow: visible;
+    overflow: hidden;
+    position: relative;
+    width: 100%; /* ICI */
+    height: 100%; /* ET LA */
 }
 
 .mapboxgl-map:focus {
