--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body::after {
 .section-weather {
     width: 80%;
     margin: 0 auto;
-    height: 30%;
+    min-height: 30%;
+    height: fit-content;
     background: #b4bdcb;
     clip-path: polygon(93% 0%, 100% 50%, 93% 100%, 0% 100%, 7% 50%, 0% 0%);
     opacity: 0.6;
@@ -70,19 +71,28 @@ body::after {
 
 #weatherForm label,
 .weatherContainer p {
-    font-size: 1.5rem;
+    font-size: 3vh;
 }
 
 #weatherContainer {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 #weatherInput {
-    height: 2rem;
+    height: 4vh;
     width: 25rem;
     padding: 0rem 1rem;
     margin: 0;
     border: 1px solid black;
+    border-radius: 0px;
+    font-size: 1vh;
+}
+
+#weatherInput::placeholder {
+    font-size: 3vh;
 }
 
 #weatherContainer__autoComplete {
@@ -91,25 +101,35 @@ body::after {
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
+    padding: 0;
+    margin: 0;
 }
 
 #weatherContainer__autoComplete p {
     position: absolute;
-    height: 2rem;
+    height: 3vh;
     width: calc(25rem + 2px);
     background: white;
     border: 1px solid black;
+    border-top: 0px;
     display: inline;
     padding: 0rem 1rem;
     margin: 0;
+    font-size: 2.5vh;
+    box-sizing: border-box;
 }
 
 #weatherContainer__autoComplete p:nth-child(1) {
-    top: 2rem;
+    top: 0vh;
+    border-top: 1px solid black;
+}
+
+#weatherContainer__autoComplete p:nth-child(2) {
+    top: 3vh;
 }
 
 #weatherContainer__autoComplete p:nth-child(3) {
-    top: 4rem;
+    top: 6vh;
 }
 
 .weatherContainer {
@@ -137,7 +157,7 @@ p,
 #weatherInput {
     display: inline;
     padding-right: 1rem;
-    font-size: 1.5rem;
+    font-size: 2.5vh;
 }
 
 #weatherIcon {
